--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
 font-family: Arial, sans-serif;
-background-image: linear-gradient(91deg, #ffc90e, #f5da80);
+background-image: linear-gradient(91deg, #000000, #6f6d65);
 }
 a {
 color: #00bd00;
